--- a/NodeConf/CreateDialog.xaml
+++ b/NodeConf/CreateDialog.xaml
@@ -30,9 +30,9 @@
     <TextBlock Grid.Column="0" Grid.Row="0" Text="CPU" Height="14" Margin="0,10,15,10" Width="21" />
     <ComboBox Grid.Column="1" Grid.Row="0" Name="cbCPU" SelectionChanged="cbCPU_SelectionChanged" Height="22" Margin="0,6" />
     <TextBlock Grid.Column="0" Grid.Row="1" Text="PHY1" Height="14" Margin="0,10,15,10" Width="28" />
-    <ComboBox Grid.Column="1" Grid.Row="1" Name="cbPhy1" IsEnabled="False" Height="22" Margin="0,6" />
+    <ComboBox Grid.Column="1" Grid.Row="1" Name="cbPhy1" IsEnabled="False" Height="22" Margin="0,6" SelectionChanged="cbPhy1_SelectionChanged" />
     <TextBlock Grid.Column="0" Grid.Row="2" Text="PHY2" Height="14" Margin="0,10,15,11" Width="28" />
-    <ComboBox Grid.Column="1" Grid.Row="2" Name="cbPhy2" IsReadOnly="True" IsEnabled="False" Height="22" Margin="0,6,0,7" />
+    <ComboBox Grid.Column="1" Grid.Row="2" Name="cbPhy2" IsReadOnly="True" IsEnabled="False" Height="22" Margin="0,6,0,7" SelectionChanged="cbPhy2_SelectionChanged" />
     <TextBlock Grid.Column="0" Grid.Row="3" Text="Project" Height="14" Margin="0,10,15,10" Width="49" />
     <Border Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Background="Gainsboro" BorderBrush="Black" BorderThickness="1" VerticalAlignment="Center" CornerRadius="3" Padding="3,0,0,0" Height="24" Margin="0,5">
       <Grid >
